# GraphContractor

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json  main.cpp
cmake/: CLI11.cmake  flags.cmake  fmt.cmake  span.cmake
include/: BackwardGraph.hpp  BidirectionalDijkstra.hpp  CHDijkstra.hpp  ContractionGraph.hpp  DijkstraQueue.hpp  Graph.hpp  GraphContractor.hpp  GraphEssentials.hpp  MultiTargetDijkstra.hpp  ParallelTransform.hpp  Timer.hpp  UnidirectionGraph.hpp
src/: BackwardGraph.cpp  BidirectionalDijkstra.cpp  CHDijkstra.cpp  ContractionGraph.cpp  Graph.cpp  GraphContractor.cpp  GraphEssentials.cpp  MultiTargetDijkstra.cpp  UnidirectionGraph.cpp  main.cpp
